short name changed

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Dictionary",
-  "short_name": "DG",
+  "short_name": "Vocab",
   "theme_color": "#1b0303",
   "background_color": "#1b0303",
   "display": "standalone",
